selfhost/test/parser/export_error_before_expr.out
Error at %FILE_NAME%:1:8
Unexpected token 'identifier', expected one of 'val', 'var', 'func', 'type', 'enum':
  |  export a + 1
            ^